--- a/ai_agent_extension/popup.html
+++ b/ai_agent_extension/popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>AI Assistant</title>
+    <title>ShopSmarter Assistant</title>
     <link href="styles.css" rel="stylesheet">
     <style>
         /* Firefox sidebar specific styles */
@@ -387,26 +387,26 @@
     <div class="chat-container">
         <!-- Header -->
         <div class="chat-header">
-            <div class="avatar bot">🤖</div>
+            <div class="avatar bot">🛒</div>
             <div class="header-content">
-                <h1>AI Assistant</h1>
-                <p>Ask me anything or upload an image!</p>
+                <h1>ShopSmarter</h1>
+                <p>Find products, get recommendations & shop smarter!</p>
             </div>
-            <button id="newChatButton" class="new-chat-button" title="Start new chat">+</button>
+            <button id="newChatButton" class="new-chat-button" title="Start new shopping session">+</button>
         </div>
 
         <!-- Messages -->
         <div class="chat-messages" id="chatMessages">
             <div class="empty-state" id="emptyState">
-                <div class="empty-state-icon">💬</div>
-                <p style="margin: 0; font-size: 1.125rem; font-weight: 500;">Start a conversation</p>
-                <p style="margin: 0.5rem 0 0 0; font-size: 0.875rem;">Ask me anything or upload an image to discuss!</p>
+                <div class="empty-state-icon">🛒</div>
+                <p style="margin: 0; font-size: 1.125rem; font-weight: 500;">Start shopping with AI</p>
+                <p style="margin: 0.5rem 0 0 0; font-size: 0.875rem;">Upload product images or ask for recommendations!</p>
             </div>
         </div>
 
         <!-- Typing indicator -->
         <div class="typing-indicator" id="typingIndicator">
-            <div class="avatar bot">🤖</div>
+            <div class="avatar bot">🛒</div>
             <div class="message-content">
                 <div class="typing-dots">
                     <div class="typing-dot"></div>
@@ -428,7 +428,7 @@
                 <textarea 
                     id="messageInput" 
                     class="message-input" 
-                    placeholder="Type your message..." 
+                    placeholder="Take a snippet or type your message..." 
                     rows="1"
                 ></textarea>
                 
